# Food-Recommendation-Engine

./: .gitignore  CMakeLists.txt  LICENSE  foodRecommendationSystem.sql  lexicon.txt
include/: AdminController.h  ApplicationFactory.h  Array.h  BoWModel.h  ChefController.h  Config.h  DbConnection.h  Double.h  EmployeeService.h  Feedback.h  FeedbackDAO.h  FoodItem.h  FoodItemDAO.h  FoodItemType.h  I16.h  I32.h  I64.h  I8.h  IApplication.h  IFeedbackDAO.h  IFoodItemDAO.h  IMenuDAO.h  INotificationDAO.h  ISessionDAO.h  IUserDAO.h  IUserResponseDAO.h  Menu.h  MenuDAO.h  MenuType.h  Notification.h  NotificationDAO.h  ProtocolDefinitions.h  ProtocolParser.h  RecommendationService.h  RequestParser.h  ResponseParser.h  Roles.h  SString.h  SentimentLexicon.h  SentimentalAnalysis.h  (+16 more)
include/Client/: AdminHandler.h  ChefHandler.h  ClientApplication.h  ClientCommunicator.h  EmployeeHandler.h  FoodRecommendationClient.h  InputHandler.h  TcpClient.h  UserHandler.h
include/Controller/: AdminController.h  AuthController.h  ChefController.h  EmployeeController.h  IController.h
include/DAO/: DiscardFeedbackAnswerDAO.h  DiscardFeedbackQuestionDAO.h  FeedbackDAO.h  FoodItemAttribute.h  FoodItemAttributeDAO.h  FoodItemDAO.h  FoodItemTypeDAO.h  IDiscardFeedbackAnswerDAO.h  IFeedbackDAO.h  IFoodItemAttribute.h  IFoodItemAttributeDAO.h  IFoodItemDAO.h  IFoodItemTypeDAO.h  ILoginDAO.h  IMenuDAO.h  IMenuItemDAO.h  IMenuTypeDAO.h  INotificationDAO.h  IPreferenceDAO.h  IReviewDAO.h  IRoleDAO.h  IScheduledMenuDAO.h  IUserActivityDAO.h  IUserDAO.h  IUserFoodPreferenceDAO.h  LoginDAO.h  MenuDAO.h  MenuItemDAO.h  MenuTypeDAO.h  NotificationDAO.h  PreferenceDAO.h  ReviewDAO.h  RoleDAO.h  ScheduledMenuDAO.h  UserActivityDAO.h  UserDAO.h  UserFoodPreferenceDAO.h
include/DTO/: ActivityType.h  Attribute.h  Category.h  DiscardFeedbackAnswer.h  DiscardFeedbackQuestion.h  Feedback.h  FoodItem.h  FoodItemType.h  Login.h  LoginData.h  Menu.h  MenuItem.h  MenuType.h  Notification.h  Preference.h  Review.h  Role.h  ScheduledMenu.h  User.h  UserActivity.h  VotingResult.h
include/Middleware/: AuthMiddleware.h  IMiddleware.h
include/SerializableTypes/: Array.h  Double.h  I16.h  I32.h  I64.h  I8.h  Pair.h  ProtocolDefinitions.h  ProtocolParser.h  SString.h  U16.h  (+5 more)
src/: AdminController.cpp  ApplicationFactory.cpp  ChefController.cpp  DbConnection.cpp  EmployeeService.cpp  FeedbackDAO.cpp  FoodItemDAO.cpp  MenuDAO.cpp  NotificationDAO.cpp  ProtocolParser.cpp  RequestParser.cpp  ResponseParser.cpp  SentimentalAnalyzer.cpp  SessionDAO.cpp  SignalHandler.cpp  UserDAO.cpp  UserResponseDAO.cpp  UserService.cpp  Util.cpp  main.cpp
system-diagrams/: AdminUseCase.plantuml  ChefUseCase.plantuml  ERD.plantuml  EmplyeeUseCase.plantuml
(+130 files in other folders)
